# brocard

./: .gitignore  Cargo.toml  HOW_IT_WORKS.md  LOG.md  README.md  flake.nix  primes.txt
benches/: benchmarks.rs  brocard_bench.rs
benches/brocard_bench/: mod.rs
benches/legendre_bench/: mod.rs
benches/montgomery_bench/: mod.rs
benches/prime_bench/: mod.rs
src/: lib.rs  main.rs  mult.rs  prime.rs
src/brocard/: broker.rs  candidate.rs  mod.rs  report.rs  span.rs
src/math/: legendre.rs  mod.rs  prime.rs
src/montgomery/: elt.rs  mod.rs  space.rs  test_case.rs
