[package]
name = "brocard"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dev-dependencies]
approx = "*"
quickcheck = "*"
quickcheck_macros = "*"
rand = "*"
criterion = "*"
criterion-macro = "*"

[[bench]]
name = "benchmarks"
harness = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
