[package]
name = "brocard"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[[bin]]
name = "brocard"
path = "src/main.rs"

[dependencies]
rayon = "*"
const_for = "*"

[dev-dependencies]
approx = "*"
quickcheck = "*"
quickcheck_macros = "*"
rand = "*"
criterion = "*"
criterion-macro = "*"

[[bench]]
name = "benchmarks"
harness = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false
